syntax = "proto3";

option go_package = "github.com/ukama/ukama/systems/common/pb/gen/events";

package ukama.events.v1;

import "validator.proto";



message CreatePackageEvent {
    string uuid = 1 [(validator.field) = {uuid_ver: 4, string_not_empty: true}];
    string orgId = 2 [(validator.field) = {uuid_ver: 4, string_not_empty: true}, json_name = "org_id"];
    string ownerId =3[(validator.field) = {uuid_ver: 4, string_not_empty: true}, json_name = "owner_id"];
    bool   flatrate = 4;
    double amount = 5;
    string from = 6;
    string to = 7;
    string simType=8 [json_name = "sim_type"];
    int64 smsVolume =9 [json_name = "sms_volume"];
    int64 dataVolume=10 [json_name = "data_volume"];
    int64 voiceVolume =11 [json_name = "voice_volume"];
    string dataUnit = 12;
    string voiceUnit = 13;
    string messageunit = 14;
    double dataUnitCost = 15;
    double voiceUnitCost = 16;
    double messageUnitCost = 17;
    string country=18;
    string provider= 19;
    string Type = 20;
}

message DeletePackageEvent {
    string uuid = 1 [(validator.field) = {uuid_ver: 4, string_not_empty: true}];
    string orgId = 2 [(validator.field) = {uuid_ver: 4, string_not_empty: true}, json_name = "org_id"];
}

message UpdatePackageEvent {
    string uuid = 1 [(validator.field) = {uuid_ver: 4, string_not_empty: true}];
    string orgId = 2 [(validator.field) = {uuid_ver: 4, string_not_empty: true}, json_name = "org_id"];
}